client to send the evaluations to sap added - updated logic to get csrf toekn for post requests updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,13 +20,19 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 #Custom settings
+#QA
+MOTOR-IP=35.239.145.242
 MOTOR-US=x-jperez
-#MOTOR-PASS=Cise_202404
-#MOTOR-IP=35.239.145.242
-MOTOR-PASS=Cise_202404$
-MOTOR-IP=35.232.31.50
-MOTOR-PORT=8000
+MOTOR-PASS=Cise_202404
+
+#PROD
+#MOTOR-IP=35.232.31.50
+#MOTOR-US=x-jperez
+#MOTOR-PASS=Cise_202404$
+
+#GENERAL
 SAP-CLIENT=300
+MOTOR-PORT=8000
 MOTOR-BASE-URI=http://${MOTOR-IP}:${MOTOR-PORT}
 
 #REDIS
